--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
+
 <body>
- <div id="social">
+  <div id="social">
     <a class="twit" href="#" title="Twitter">Twitter</a>
     <a class="fbook" href="#" title="Facebook">Facebook</a>
     <a class="gplus" href="#" title="Google Plus">Google Plus</a>
@@ -26,12 +30,15 @@
       <div id="navbar" class="light-fade">
         <div class="wrapper">
           <nav>
-            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a class="selected" href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
+            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a
+              href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a
+              class="selected" href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a
+              class="menu-icon">&#9776;</a>
           </nav>
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-    
+
     <div class="wrapper clearfix">
 
       <section class="col-2 first shadow">
@@ -51,7 +58,8 @@
 
       <section class="col-1 shadow">
         <!-- Map -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6049.760881033193!2d-73.99517294629514!3d40.69863072747073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights!5e0!3m2!1sen!2sus!4v1393612605402"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6049.760881033193!2d-73.99517294629514!3d40.69863072747073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights!5e0!3m2!1sen!2sus!4v1393612605402"></iframe>
       </section>
 
     </div><!-- .wrapper -->
@@ -96,6 +104,7 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
+
 </html>
