--- a/market-report.html
+++ b/market-report.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
+
 <body>
   <div id="social">
     <a class="twit" href="#" title="Twitter">Twitter</a>
@@ -26,7 +30,10 @@
       <div id="navbar" class="light-fade">
         <div class="wrapper">
           <nav>
-            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a class="selected" href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
+            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a
+              href="real-estate-listings.html">Listings</a><a class="selected" href="market-report.html">Market
+              Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a
+              class="menu-icon">&#9776;</a>
           </nav>
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
@@ -104,6 +111,7 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
+
 </html>
