--- a/new-properties.html
+++ b/new-properties.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
+
 <body>
   <div id="social">
     <a class="twit" href="#" title="Twitter">Twitter</a>
@@ -26,26 +30,30 @@
       <div id="navbar" class="light-fade">
         <div class="wrapper">
           <nav>
-            <a href="index.html">About</a><a class="selected" href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
+            <a href="index.html">About</a><a class="selected" href="new-properties.html">New Properties</a><a
+              href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a
+              href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a
+              class="menu-icon">&#9776;</a>
           </nav>
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-  
+
     <div class="wrapper clearfix">
 
       <section class="col-3 first shadow">
         <figure>
           <img src="images/new-1.jpg" alt="304 Olson Rd.">
-           <figcaption>Property #: 0938745</figcaption>
+          <figcaption>Property #: 0938745</figcaption>
         </figure>
         <h3>304 Olson Rd.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, totam ratione fugiat. Commodi. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, totam ratione fugiat. Commodi. Lorem ipsum
+          dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
 
       <section class="col-3 first shadow">
@@ -54,7 +62,9 @@
           <figcaption>Property #: 124562</figcaption>
         </figure>
         <h3>9872 Freemont Dr.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, totam ratione fugiat. Commodi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, excepturi, culpa enim nihil temporibus ipsam quos voluptates nesciunt maxime quas dolor porro deleniti non cupiditate placeat sequi expedita harum natus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, totam ratione fugiat. Commodi Lorem ipsum dolor
+          sit amet, consectetur adipisicing elit. Repellendus, excepturi, culpa enim nihil temporibus ipsam quos
+          voluptates nesciunt maxime quas dolor porro deleniti non cupiditate placeat sequi expedita harum natus.</p>
       </section>
     </div><!-- .wrapper -->
   </div><!-- .white-wood -->
@@ -98,6 +108,7 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
+
 </html>
