--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
   </head>
   <body>
-    <div id="social">
+    <div id="social" class="social-links">
       <a class="twit" href="#" title="Twitter">Twitter</a>
       <a class="fbook" href="#" title="Facebook">Facebook</a>
       <a class="gplus" href="#" title="Google Plus">Google Plus</a>
